--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <meta name="description" content="This is my description">
     <meta name="author" content="Matthew Zelinsky">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <!-- Our CSS and JavaScript -->
+    <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
     <script type="text/javascript" src="scripts/javascript.js"></script>
 </head>
 
