Starting pos of pythons and greg set to a node

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="scripts/Model.js"></script>
     <script type="text/javascript" src="scripts/View.js"></script>
     <script type="text/javascript" src="scripts/Controller.js"></script>
+    <script type="text/javascript" src="scripts/MazeNodes.js"></script>
 </head>
 
 <body>
