--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         });
     </script>
 
-    <img src="images/gregman-maze.png" usemap="maze-map">
+    <img class="maze" src="images/gregman-maze.png" usemap="maze-map">
 
-    <map name="maze-map" id="mazemap">
+    <map class="maze" name="maze-map" id="mazemap">
     </map>
 </body>
 
