added start and stop buttons

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         <div class="python" id="python3"></div>
         <div class="python" id="python4"></div>
     </div>
-
+    <div id="status">
+        <button class="btn btn-primary" id="start">Start</button> 
+        <button class="btn btn-primary" id="stop">Stop</button> 
+    </div>
     <script>
         $(document).ready(() => {
             const model = new Model(),
