--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="python" id="python2"></div>
         <div class="python" id="python3"></div>
         <div class="python" id="python4"></div>
+        <div id="debug_light"></div>
     </div>
 
     <script>
@@ -38,16 +39,11 @@
                 view = new View(model, {
                     "greg": document.getElementById("greg"),
                     "pythons": [document.getElementById("python1"), document.getElementById("python2"), document.getElementById("python3"), document.getElementById("python4"),],
-                    "mazemap": document.getElementById("mazemap")
-                }),
+                    "debug_light": document.getElementById("debug_light")
+                });
                 controller = new Controller(model, view);
         });
     </script>
-
-    <img src="images/gregman-maze.png" usemap="maze-map">
-
-    <map name="maze-map" id="mazemap">
-    </map>
 </body>
 
 </html>
