--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             const model = new Model(),
                 view = new View(model, {
                     "greg": document.getElementById("greg"),
-                    "pythons": [document.getElementById("python1"), document.getElementById("python2"), document.getElementById("python3"), document.getElementById("python4"),],
+                    "pythons": [document.getElementById("python1"), document.getElementById("python2"), document.getElementById("python3"), document.getElementById("python4")],
                     "debug_light": document.getElementById("debug_light")
                 });
                 controller = new Controller(model, view);
