--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
     <div id="maze">
-        <div id="greg"></div>
+        <div id="greg" class="greg"></div>
         <div class="python" id="python1"></div>
         <div class="python" id="python2"></div>
         <div class="python" id="python3"></div>
@@ -34,6 +34,7 @@
     <div id="status">
         <button class="btn btn-primary" id="start">Start</button> 
         <button class="btn btn-primary" id="stop">Stop</button> 
+        <span id="lives"></span>
     </div>
     <script>
         $(document).ready(() => {
