Added Semicolon Setup

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <div id="maze">
         <div id="greg"></div>
+        <div class="semicolon" id="semicolon1"></div>
         <div class="python" id="python1"></div>
         <div class="python" id="python2"></div>
         <div class="python" id="python3"></div>
