--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-    <title>My Web Page</title>
+    <title>GREGMAN</title>
     <meta charset="utf-8">
     <meta name="description" content="This is my description">
     <meta name="author" content="Matthew Zelinsky">
