--- a/index.html
+++ b/index.html
@@ -26,23 +26,24 @@
 
     <div id="maze">
         <div id="greg" class="greg"></div>
+        <div class="python" id="python0"></div>
         <div class="python" id="python1"></div>
         <div class="python" id="python2"></div>
         <div class="python" id="python3"></div>
-        <div class="python" id="python4"></div>
         <div id="debug_light"></div>
     </div>
     <div id="status">
         <button class="btn btn-primary" id="start">Start</button> 
         <button class="btn btn-primary" id="stop">Stop</button> 
         <span id="lives"></span>
+        <span id="score"></span>
     </div>
     <script>
         $(document).ready(() => {
             const model = new Model(),
                 view = new View(model, {
                     "greg": document.getElementById("greg"),
-                    "pythons": [document.getElementById("python1"), document.getElementById("python2"), document.getElementById("python3"), document.getElementById("python4")]
+                    "pythons": [document.getElementById("python0"), document.getElementById("python1"), document.getElementById("python2"), document.getElementById("python3")]
                 });
                 controller = new Controller(model, view);
         });
