New placement system is basically ready

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="scripts/View.js"></script>
     <script type="text/javascript" src="scripts/Controller.js"></script>
     <script type="text/javascript" src="scripts/MazeNodes.js"></script>
+    <script type="text/javascript" src="scripts/PelletData.js"></script>
 </head>
 
 <body>
