Moved button and game info to right of maze. Lives look a little weird, should be fixed.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
     </div>
     <div id="status" class="container">
         <div class="row">
+            <div class="col-lg-1">
             <button class="btn btn-primary" id="play">Play</button>
             <span id="lives"></span>
             <span id="score"></span>
+            </div>
+            <div class="clearfix"></div>
         </div>
     </div>
 
