--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="python" id="python3"></div>
         <!--<div id="debug_light"></div>-->
         </div>
-        <div id="status" class="container">
+        <div id="status" class="container hidden">
             <div class="row">
                 <div class="col-lg-1">
                 <button class="btn btn-primary" id="play">Play</button>
@@ -77,6 +77,12 @@
             document.getElementById('game').style.visibility = "visible"; 
             document.getElementById('opening').style.visibility = "hidden"; 
             document.querySelector('body').setAttribute("class", "game"); 
+            view.moveGreg(model._greg.getPos);
+            let pythonPosList = [];
+            model._pythons.forEach(python => {
+                pythonPosList.push(python.getPos);
+            });
+            view.movePythons(pythonPosList);
         }); 
         document.getElementById("multi").addEventListener('click', function(){
             var model = new Model(),
@@ -89,6 +95,12 @@
             document.getElementById('game').style.visibility = "visible"; 
             document.getElementById('opening').style.visibility = "hidden"; 
             document.querySelector('body').setAttribute("class", "game"); 
+            view.moveGreg(model._greg.getPos);
+            let pythonPosList = [];
+            model._pythons.forEach(python => {
+                pythonPosList.push(python.getPos);
+            });
+            view.movePythons(pythonPosList);
         }); 
     </script>
 </body>
