Updated end game

--- a/index.html
+++ b/index.html
@@ -46,17 +46,20 @@
             </div>
         </div>
 
-        <div id="endContainer" class="container-fluid">
-            <div id="winnerEndScreen" class="endImage hidden"></div>
-            <div id="endScreen" class="endImage hidden"></div>
-            <button class="btn btn-primary hidden" id="restart">Play Again</button>
-        </div>
     </div>
 
+    <!--
+    <div id="endContainer" class="container-fluid">
+        <div id="winnerEndScreen" class="endImage hidden"></div>
+        <div id="endScreen" class="endImage hidden"></div>
+        <button class="btn btn-primary hidden" id="restart">Play Again</button>
+    </div>
+    -->
+
     <div id="opening" class="container">
-        <div class="panel panel-primary col-md-6">
-                <div class="panel-heading text-center">Select Mode:</div>
-                <div class="panel-body text-center">
+        <div id="info-panel" class="panel panel-primary col-md-6">
+                <div id="info-panel-head" class="panel-heading text-center">Select Mode:</div>
+                <div id="info-panel-body" class="panel-body text-center">
                         <button id="start" class="btn btn-primary">Play with AI</button>
                         <button id="multi" class="btn btn-primary">Play with Friends</button>
                 </div>
