Updated end-game screen.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 pythonPosList.push(python.getPos);
             });
             view.movePythons(pythonPosList);
+            $("#play").click();
         });
         document.getElementById("multi").addEventListener('click', function () {
             var model = new Model(),
@@ -109,6 +110,7 @@
                 pythonPosList.push(python.getPos);
             });
             view.movePythons(pythonPosList);
+            $("#play").click();
         }); 
     </script>
 </body>
