--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div id="opening" class="container">
         <div id="info-panel" class="panel panel-primary col-md-6">
-            <div id="info-panel-head" class="panel-heading text-center">Select Mode:</div>
+            <div id="info-panel-head" class="panel-heading text-center">Select Mode</div>
             <div id="info-panel-body" class="panel-body text-center">
                 <button id="start" class="btn btn-primary">Play with AI</button>
                 <button id="multi" class="btn btn-primary">Play with Friends</button>
