Update authors list

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <title>GREGMAN</title>
     <meta charset="utf-8">
-    <meta name="description" content="This is my description">
-    <meta name="author" content="Matthew Zelinsky">
+    <meta name="description" content="GREGMAN">
+    <meta name="author" content="Matthew Zelinsky, Josh Davis, Daniel Warszawski, Landon Jones, Sophia Freaney">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
